Fix hamburger button on Safari and IOS, fix service and blog card sizeformat

--- a/css/style.css
+++ b/css/style.css
@@ -236,11 +236,22 @@
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 11;
     border-right: 1px solid #e8dfec;
-    padding: 30px;
+
+
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
+}
+
+.side .side-inner {
+ position: absolute;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;
+ padding: 30px;
+ overflow-y: auto;
 }
 
 .side .logo {
@@ -668,6 +679,7 @@
      text-align: center;
      -webkit-transition: all 0.3s ease;
      transition: all 0.3s ease;
+     width: 100%;
  }
 
  .service .service-item .service-item-inner:hover {
@@ -997,12 +1009,15 @@
      flex: 0 0 33.33%;
      max-width: 33.33%;
      padding-bottom: 30px;
+     display: flex;
  }
 
  .blog .blog-item-inner {
      border-radius: 10px;
      overflow: hidden;
      border: 1px solid #d4d4e3;
+     width: 100%;
+     background-color: #fdf9ff;
  }
 
  .blog .blog-item-inner .blog-img {
@@ -1035,7 +1050,6 @@
 
  .blog .blog-item-inner .blog-info {
      padding: 30px 15px;
-     background-color: #fdf9ff;
  }
 
  .blog .blog-item-inner .blog-info .blog-title {
@@ -1184,7 +1198,7 @@
  body.dark .blog .blog-item-inner .blog-info .blog-description,
  body.dark .service .service-item .service-item-inner p,
  body.dark .about .about-content .timeline .timeline-text,
- body.dark .about .about-content .timeline .timeline.date,
+ body.dark .about .about-content .timeline .timeline-date,
  body.dark .about .about-content .skills .skill-item .skill-percent,
  body.dark .about .about-content .personal-info .info-item p span,
  body.dark .about .about-content .about-text p,
@@ -1221,7 +1235,7 @@
      }
 
      .side .nav-toggler.open {
-         left: 300px;
+         left: 200px;
      }
 
      .side {
